public/css/media-queries.css
/*
 * Nerds with Hair
 * Envy Wordpress Theme Media Queries
 * @nerdswithhair
 * www.nerdswithhair.com
*/

@media (max-width: 1199px) {

    p.blog--submit__comment__sub-title,
    p.contact--sub-title {
        margin-bottom: 20px;
    }

    .form-horizontal .form-group label {
        color: #fff;
    }

    a.portfolio--feature__arrow {
        font-size: 40px;
        font-size: 4rem;
    }

    .portfolio--feature__arrow-left {
        left: 15px;
        padding: 40px 30px;
    }

    .portfolio--feature__arrow-right {
        right: 15px;
        padding: 40px 30px;
    }

    .project .portfolio--feature__main {
        margin-bottom: 60px;
    }

    .font-icons code {
        font-size: 12px;
        font-size: 1.2rem;
    }

    .font-icons td {
        padding: 8px!important;
    }

    .contact--contact-options {
        padding-bottom: 30px;
    }

}

@media (min-width: 992px) and (max-width: 1199px) {

    .contact--right-hand-bar {
        padding-left: 15px;
    } 

    .Flexible-container {
        padding-bottom: 50%;
    }

    .portfolio--list figcaption p,
    .portfolio--list figcaption a.green {
        font-size: 16px;
        font-size: 1.6rem;
    }

}

@media (max-width: 991px) {

    .right-hand-bar,
    .contact--right-hand-bar {
        padding-left: 15px;
    }

    .Flexible-container {
        padding-bottom: 50%;
    }

    .portfolio--title {
        margin-top: 50px;
    }

    .portfolio--feature {
        padding: 80px 0px 50px;
    }

    .portfolio--lr {
        padding-top: 80px;
        padding-bottom: 50px;
    }

    .portfolio--list {
        padding: 80px 0px 0px;
    }

    ul.category-tags {
        margin-bottom: 10px;
    }

    .portfolio--feature__arrow-left {
        left: 15px;
        padding: 30px 30px 30px 25px;
    }

    .portfolio--feature__arrow-right {
        right: 15px;
        padding: 30px 25px 30px 30px;
    }   

    .table-bordered {
        margin-bottom: 30px;
    } 

    .font-icons code {
        font-size: 13px;
        font-size: 1.3rem;
    }

    .font-icons span {
        font-size: 13px;
        font-size: 1.3rem;
    }

}

@media (min-width: 768px) {

    .navbar-brand {
        margin-left: 0px;
    }

    .navbar-nav {
        float: right;
    }

    .navbar {
        height: 85px;
    }

    .visible-small-only {
        display: none;
    } 

}

@media (min-width: 768px) and (max-width:990px) {

    a.portfolio--feature__arrow {
        top: 37%;
        font-size: 35px;
        font-size: 3.5rem;        
    }

    .portfolio--feature__arrow-left,
    .portfolio--feature__arrow-right {
        padding: 25px;
    }

}

@media (min-width: 650px) and (max-width:767px) {

    a.portfolio--feature__arrow {
        top: 33%;
        font-size: 35px;
        font-size: 3.5rem;        
    }

    .portfolio--feature__arrow-left,
    .portfolio--feature__arrow-right {
        padding: 25px;
    }

}

@media (max-width:767px) {

    body {
        font-size: 16px; /* base font size is 10px */
        font-size: 1.6rem; /* base font size is 10px */
        line-height: 1.6666em;
    }

    .body-copy {
        margin-bottom: 10px;
        font-size: 18px;
        font-size: 1.8rem;
        line-height: 1.66666em;
    }

    .container {
        padding-left: 20px;
        padding-right: 20px;
    }

    .col-12, .col-lg-8, .col-lg-4 {
        padding-left: 0px;
        padding-right: 0px;
    }

    .navbar-brand {
        padding: 20px 0px;
        font-size: 25px;
        font-size: 2.5rem;
    }

    .jumbotron { 
        padding-top: 110px;
        padding-bottom: 70px;
    }

    .jumbotron--title {
        font-size: 40px;
        font-size: 4rem;
    }

    .jumbotron--sub-title {
        font-size: 20px;
        font-size: 2rem;
    }

    .intro {
        padding: 60px 15px 20px;
    }

    .tweet {
        padding: 50px 15px 40px;
    }

    .intro h3,
    .tweet h3 {
        font-size: 17px;
        font-size: 1.7rem;
    }

    .tweet--secondary {
        font-size: 15px;
        font-size: 1.5rem;    
    }

    .main-content {
        margin-top: 60px;
    }

    .form-control {
        font-size: 1.5rem;
        padding: 25px 20px;
    }

    .archives--search .btn {
        padding: 11px 20px;
    }

    .footer {
        margin-top: 20px;
        padding-top: 40px;
        padding-bottom: 30px;
        font-size: 14px;
        font-size: 1.4rem;
    }

    .footer .col-sm-2,
    .footer .col-sm-3 {
        margin-bottom: 10px;
    }

    .footer--main-logo {
        font-size: 25px;
        font-size: 2.5rem;
    }
    
    .brand-font-secondary {
        font-size: 17px;
        font-size: 1.7rem;
    }

    h4,
    .h4 {
        font-size: 25px;
        font-size: 2.5rem;
        margin-bottom: 30px;
    }
    
    .archives--search {
        margin-bottom: 20px;
    }

    .btn {
        width: 100%;
    }

    .Flexible-container {
        padding-bottom: 50%;
    }

    .portfolio--lr {
        padding-top: 60px;
        padding-bottom: 50px;
    }

    .portfolio--title {
        margin-top: 30px;
    }

    .portfolio--sub-title {
        margin-bottom: 20px;
    }

    .portfolio--feature {
        padding: 80px 0px 50px;
    }

    .portfolio--feature__main {
        padding-left: 0px;
        padding-right: 0px;
    }

    a.portfolio--feature__arrow {
        top: 33%;
    }

    .portfolio--feature__arrow-left {
        left: 0px;
    }

    .portfolio--feature__arrow-right {
        right: 0px;
    }

    /* styling for the collapsed menu */
    .navbar {
        height: 60px;
    }

    .navbar .container {
        background-color: #fff;
    }

    .navbar-collapse {
        border-top: none;
        padding-right: 0px;
        padding-left: 0px;
        overflow-x: hidden;
        overflow-y: hidden;
    }

    .navbar-toggle {
        border: 2px solid #cfcfcf;
    }
    .navbar-toggle .icon-bar {
        color: #cfcfcf;
    }

    .navbar-toggle:hover,
    .navbar-toggle:focus {
        background-color: #50cb81;
        border: 2px solid #50cb81;
    }

    .navbar-toggle:hover .icon-bar,
    .navbar-toggle:focus .icon-bar {
        background-color: #fff;
    }

    .navbar-nav {
        text-align: center;
        padding-top: 0px;
    }  

    .navbar-nav li {
        padding: 0px 15px;
        margin-top: 10px;
        margin-bottom: 10px;
    }

    .navbar-nav li:last-of-type {
        margin-bottom: 15px;
    }

    .navbar-nav > .active > a,
    .navbar-nav > .active > a:hover, 
    .navbar-nav > .active > a:focus, 
    .navbar-nav > li.active, 
    .navbar-nav > li.active:hover, 
    .navbar-nav > li.active:focus {
        color: #fff;
        background-color: #cfcfcf;
        padding: 10px 0px;
        margin-left: 15px;
        margin-right: 15px;
        border-radius: 4px;
    }

    .navbar-nav > li > a {
        padding-top: 10px;
        padding-bottom: 10px;
        color: #49525b;
    }

    .pagination {
        padding-left: 15px;
    }

    .components .col-xs-12 {
        padding-left: 0px;
        padding-right: 0px;
    }

    .visible-small-only {
        display: block;
    } 

    .portfolio--list figcaption p,
    .portfolio--list figcaption a.green {
        padding: 16px 20px 0px;
    }

    .project .portfolio--feature__main {
        padding-left: 0px;
        padding-right: 0px;
    }

    .contact--contact-options {
        padding-bottom: 10px;
    }

    .archives--search .form-control {
        height: 50px;
    }

    .blog-categories-header {
        padding: 10px 20px;
    }

}

@media (min-width:558px) and (max-width: 767px) {

    .footer .col-12,
    .footer ul.col-12  {
        width: 33.3%;
        text-align: left;
        float: left;
    }

    .footer ul li {
        display: block;
        text-align: left;
    }

    .portfolio--list li.col-12 {
        width: 50%;
        float: left;
    }

    .portfolio--list li.col-12:nth-child(odd) {
        padding-right: 10px;
    }

    .portfolio--list li.col-12:nth-child(even) {
        padding-left: 10px;
    }

}

@media (max-width:557px) {

    .footer .col-12 {
        text-align: left;
    }

    .footer ul.col-12 {
        width: 50%;
        text-align: left;
        float: left;
        margin-bottom: 30px;
    }

    .footer ul li {
        display: block;
        text-align: left;
    } 

    .project .portfolio--feature__main {
        margin-bottom: 30px;
    }

}

@media (min-width: 480px) and (max-width: 767px) {

    .portfolio--list {
        padding: 70px 0px 10px;
        margin-bottom: 0px;
    }

}

@media (min-width: 479px) and (max-width:649px) {

    a.portfolio--feature__arrow {
        top: 37%;
        font-size: 25px;
        font-size: 2.5rem;        
    }

    .portfolio--feature__arrow-left,
    .portfolio--feature__arrow-right {
        padding: 20px;
    }

}


@media (max-width:479px) {

    .popular-blog-post-list li.media.col-xs-6,
    .contact--right-hand-bar .row .col-xs-6 {
        width: 100%;
    }    

    .nav-tabs > li > a { 
        padding: 10px 15px;
        font-size: 15px;
        font-size: 1.5rem;
    }

    .panel-title,
    .glyphicon-plus, 
    .glyphicon-minus {
        font-size: 15px;
        font-size: 1.5rem;
    }

    .blog hr {
        margin-top: 20px;
        margin-bottom: 40px;
    }

    hr.hidden-lg {
        margin-top: 20px;
        margin-bottom: 40px;
    }

    .blog-comments--tags {
        display: block;
    }

    .blog-comments--tags:first-of-type {
        margin-bottom: 10px;
    }

    p.blog--submit__comment__sub-title,
    p.contact--sub-title {
        margin-bottom: 10px;  
    } 

    .form-group {
        margin-bottom: 5px;
    }

    blockquote {
        border-left: 10px solid #50cb81;
    }

    .Flexible-container {
        padding-bottom: 60%;
    } 

    .portfolio--lr {
        padding-top: 50px;
        padding-bottom: 30px;
    }

    .portfolio--title {
        margin-top: 40px;
    }

    .portfolio--sub-title {
        margin-bottom: 10px;
    }

    .portfolio--feature {
        padding: 50px 0px 30px;    
    }

    .portfolio--list {
        padding: 50px 0px 0px;
        margin-bottom: 0px;
    }

    .portfolio--list li:last-child {
        padding-bottom: 20px;
    }

    .project .portfolio--list li {
        padding-bottom: 10px;
    }

    a.portfolio--feature__arrow {
        top: 32%;
        font-size: 20px;
        font-size: 2rem;        
    }

    .portfolio--feature__arrow-left {
        left: -20px;
    }

    .portfolio--feature__arrow-right {
        right: -20px;
    }

    .portfolio--feature__arrow-left,
    .portfolio--feature__arrow-right {
        padding: 15px;
    }

    .font-icons code {
        font-size: 10px;
        font-size: 1rem;
    }

    .components .font-icons span {
        font-size: 13px;
        font-size: 1.3rem;
    }

    ul.category-tags {
        margin-bottom: 30px;
    }

    .archives ul.list-unstyled li:last-child {
        padding-bottom: 10px;
    }
}

